--- a/index.html
+++ b/index.html
@@ -73,105 +73,103 @@ h2 { margin-bottom: 35px; text-align: center; font-size: 2.2rem; font-weight: 60
 .skill:hover { background: rgba(0, 184, 212, 0.2); border-color: var(--cyan-accent); color: var(--cyan-glow); transform: translateY(-3px); box-shadow: 0 4px 10px rgba(0, 184, 212, 0.3); }
 
 /* --- Certificates Section --- */
+/* --- Certificates Section --- */
 #certificates p { text-align:center; margin-bottom: 25px; color: var(--text-medium); font-size: 0.95rem;}
 
 .certificate-viewer {
     margin-top: 0; /* Collapse margin initially */
-    display: flex; 
+    display: flex; /* Use flex to center the active item */
     justify-content: center;
     align-items: center;
-    position: relative; 
-    border: 1px solid transparent; 
+    position: relative; /* Needed for absolute positioning of children */
+    border: 1px solid transparent; /* Keep layout consistent, hide border */
     border-radius: 10px;
     background: transparent;
     padding: 0;
     overflow: hidden;
     transition: padding 0.5s ease, background-color 0.5s ease, border-color 0.5s ease, margin-top 0.5s ease, min-height 0.5s ease;
     min-height: 0; /* Allow collapsing */
-    flex-direction: column; /* Ensure content flows vertically */
 }
 /* Apply styles ONLY when a certificate is visible */
 .certificate-viewer:has(> .active) {
     border-color: var(--charcoal);
     background: rgba(17, 17, 22, 0.4);
     padding: 15px;
-    margin-top: 30px; 
-    min-height: 400px; 
+    margin-top: 30px; /* Add margin back when visible */
+    min-height: 400px; /* Set a min-height when active to contain the certs */
 }
 
-/* Hide initially & base positioning for ALL non-active direct children */
+/* Hide initially & base positioning for ALL direct children */
 .certificate-viewer > img,
 .certificate-viewer > #java-cert {
     opacity: 0;
-    position: absolute; /* Keep hidden elements positioned absolutely */
+    position: absolute; /* Position absolutely for layering */
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%); 
-    transition: opacity 0.5s ease; 
-    pointer-events: none; 
-    max-width: calc(100% - 30px); 
+    transform: translate(-50%, -50%); /* Center */
+    transition: opacity 0.5s ease; /* Only transition opacity */
+    pointer-events: none; /* Non-interactive when hidden */
+    max-width: calc(100% - 30px); /* Fit within potential padding */
     max-height: calc(100% - 30px);
     width: auto;
     height: auto;
 }
 
-/* Show active direct child (Single Image or Java Group) - CRITICAL FIX */
+/* Show active direct child - DOES NOT take space itself, acts as a layer */
 .certificate-viewer > .active {
     opacity: 1;
     pointer-events: auto;
-    position: static; /* FIX: Forces container to expand with content, removing the empty space issue */
-    transform: none;
-    top: auto;
-    left: auto;
-
-    max-width: 100%;
-    max-height: 100%;
+    position: absolute; /* Keep absolute */
+    /* Size constraints */
+    max-width: 95%; /* Limit width within the viewer */
+    max-height: 95%; /* Limit height */
     width: auto;
     height: auto;
+    /* Reset transform if needed */
+    transform: translate(-50%, -50%); /* Keep centered */
 }
 
-/* Specific size and centering for single active images */
+/* Specific size for single active images */
 .certificate-viewer > img.active {
-    max-height: 500px; 
-    max-width: 100%;
+    max-height: 450px; /* Max height for single large certs */
     object-fit: contain;
     border-radius: 8px;
     box-shadow: 0 8px 25px rgba(0, 0, 0, 0.5);
-    margin: 0 auto;
-    display: block;
 }
 
 /* Java container specific style when active */
 .certificate-viewer #java-cert.active {
-    display: flex; 
+    display: flex; /* Use flex to arrange children */
     justify-content: center;
-    align-items: flex-start; /* Align top for better flow */
-    gap: 10px;
+    align-items: center;
+    gap: 20px;
     flex-wrap: wrap;
-    width: 100%; 
-    height: auto;
-    padding: 10px 0;
-    max-height: none; /* Allow vertical expansion */
-    overflow-y: visible;
+    width: 100%; /* Take full available width */
+    height: 100%; /* Take full available height */
+    /* Ensure opacity/pointer events are set correctly */
+    opacity: 1;
+    pointer-events: auto;
+    position: absolute; /* Keep centered */
+    /* Other styles like max-height handled by .active */
 }
 
-/* Images inside the ACTIVE Java container - CRITICAL FIX (ensures visibility and flow) */
+/* Images inside the ACTIVE Java container */
 .certificate-viewer #java-cert.active img {
-    max-height: 250px; 
-    width: 48%; 
-    max-width: 350px; 
-    height: auto;
+    max-height: 350px; /* ** Smaller than single certs ** */
+    max-width: 48%; /* Allow side-by-side, adjust % if needed */
+    width: auto; height: auto; /* Maintain aspect ratio */
     object-fit: contain;
     border-radius: 6px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
-    
-    display: block;
-    opacity: 1; /* ENSURE VISIBILITY */
+    /* Make them behave like inline elements within the flex container */
+    display: inline-block;
+    vertical-align: middle;
+    /* No absolute positioning needed here */
+    position: static;
+    /* Ensure visible */
+    opacity: 1;
     pointer-events: auto;
-    position: static; /* ENSURE CORRECT FLOW (NOT ABSOLUTE) */
-    transform: none; 
-    margin: 5px; 
-    flex: 0 0 auto;
+    transform: none;
 }
 
 /* --- Projects Section --- */
@@ -227,7 +225,7 @@ h2 { margin-bottom: 35px; text-align: center; font-size: 2.2rem; font-weight: 60
 .contact-form textarea { min-height: 120px; resize: vertical; padding-top: 13px; }
 .contact-form input:focus + label, .contact-form input:not(:placeholder-shown) + label, .contact-form textarea:focus + label, .contact-form textarea:not(:placeholder-shown) + label { top: -9px; left: 10px; font-size: 0.75rem; color: var(--cyan-accent); background: var(--bg-medium); padding: 1px 5px; border-radius: 4px; }
 .contact-form button { width: 100%; padding: 13px; font-size: 1rem; background: var(--cyan-accent); border: none; border-radius: 8px; font-weight: 600; cursor: pointer; transition: transform var(--transition-speed), box-shadow var(--transition-speed), background-color var(--transition-speed); color: var(--bg-dark); margin-top: 10px; box-shadow: 0 4px 15px rgba(0, 184, 212, 0.3); }
-.contact-form button:hover { transform: translateY(-3px) scale(1.03); background: var(--cyan-glow); box-shadow: 0 7px 20px rgba(0, 229, 255, 0.5); }
+.contact-form button:hover { transform: translateY(-3px); box-shadow: 0 7px 20px rgba(0, 229, 255, 0.5); background-color: var(--cyan-glow); }
 .social-links { margin-top: 30px; display: flex; justify-content: center; gap: 25px; }
 .social-btn { width: 50px; height: 50px; background: rgba(255, 255, 255, 0.05); border: 1px solid var(--charcoal); box-shadow: 0 3px 10px rgba(0, 0, 0, 0.4); border-radius: 50%; display: flex; justify-content: center; align-items: center; transition: transform var(--transition-speed), box-shadow var(--transition-speed), border-color var(--transition-speed), background-color var(--transition-speed); overflow: hidden; }
 .social-btn img { width: 100%; height: 100%; object-fit: cover; display: block; transition: transform 0.3s ease; }
@@ -275,7 +273,7 @@ footer { background: #08080b; padding: 20px; text-align: center; margin-top: 50p
     .skill { padding: 9px 16px; font-size: 0.85rem;}
 
     .certificate-viewer > img.active { max-height: 400px; }
-    .certificate-viewer #java-cert.active img { max-height: 250px; width: 48%; }
+    .certificate-viewer #java-cert.active img { max-height: 350px; max-width: 47%; }
 
     .resume-options { flex-direction: column; gap: 15px; }
     .resume-btn { padding: 11px 24px; font-size: 0.9rem; }
@@ -308,16 +306,8 @@ footer { background: #08080b; padding: 20px; text-align: center; margin-top: 50p
     .skill { padding: 8px 14px; font-size: 0.8rem; }
 
     .certificate-viewer > img.active { max-height: 300px; }
-    .certificate-viewer #java-cert.active { 
-        gap: 5px; 
-        flex-direction: column; 
-        align-items: center; 
-    }
-    .certificate-viewer #java-cert.active img { 
-        max-height: 200px; 
-        width: 95%; 
-        margin: 5px auto;
-    }
+    .certificate-viewer #java-cert.active { gap: 10px; }
+    .certificate-viewer #java-cert.active img { max-height: 80%; max-width: 90%; }
 
     .project img { height: 160px; }
     .project-content { padding: 15px; }
@@ -433,11 +423,11 @@ footer { background: #08080b; padding: 20px; text-align: center; margin-top: 50p
             <div class="skills">
                 <div class="skill">HTML</div>
                 <div class="skill">CSS</div>
-                <div class="skill" onclick="showCertificate('js-cert')">JavaScript</div>
-                <div class="skill" onclick="showCertificate('java-cert')">Java</div>
+                <div class="skill">JavaScript</div>
+                <div class="skill">Java</div>
                 <div class="skill">C++</div>
-                <div class="skill" onclick="showCertificate('sql-cert')">MySQL</div>
-                <div class="skill" onclick="showCertificate('python-cert')">Python</div>
+                <div class="skill">MySQL</div>
+                <div class="skill">Python</div>
                 <div class="skill">Flask</div>
                 <div class="skill">C</div>
                 <div class="skill">Git</div>
