--- a/index.html
+++ b/index.html
@@ -73,103 +73,109 @@ h2 { margin-bottom: 35px; text-align: center; font-size: 2.2rem; font-weight: 60
 .skill:hover { background: rgba(0, 184, 212, 0.2); border-color: var(--cyan-accent); color: var(--cyan-glow); transform: translateY(-3px); box-shadow: 0 4px 10px rgba(0, 184, 212, 0.3); }
 
 /* --- Certificates Section --- */
-/* --- Certificates Section --- */
 #certificates p { text-align:center; margin-bottom: 25px; color: var(--text-medium); font-size: 0.95rem;}
 
 .certificate-viewer {
-    margin-top: 0; /* Collapse margin initially */
-    display: flex; /* Use flex to center the active item */
+    margin-top: 0; 
+    display: flex; 
     justify-content: center;
-    align-items: center;
-    position: relative; /* Needed for absolute positioning of children */
-    border: 1px solid transparent; /* Keep layout consistent, hide border */
+    align-items: flex-start;
+    position: relative; 
+    border: 1px solid transparent; 
     border-radius: 10px;
     background: transparent;
     padding: 0;
     overflow: hidden;
     transition: padding 0.5s ease, background-color 0.5s ease, border-color 0.5s ease, margin-top 0.5s ease, min-height 0.5s ease;
-    min-height: 0; /* Allow collapsing */
+    min-height: 0; 
+    flex-direction: column;
 }
+
 /* Apply styles ONLY when a certificate is visible */
 .certificate-viewer:has(> .active) {
     border-color: var(--charcoal);
     background: rgba(17, 17, 22, 0.4);
     padding: 15px;
-    margin-top: 30px; /* Add margin back when visible */
-    min-height: 400px; /* Set a min-height when active to contain the certs */
+    margin-top: 30px; 
+    /* Increased MIN-HEIGHT for multi-certificate layout and better spacing */
+    min-height: 600px; 
 }
 
-/* Hide initially & base positioning for ALL direct children */
+/* Hide initially & base positioning for ALL non-active direct children */
 .certificate-viewer > img,
 .certificate-viewer > #java-cert {
     opacity: 0;
-    position: absolute; /* Position absolutely for layering */
+    position: absolute; /* Keep hidden elements positioned absolutely */
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%); /* Center */
-    transition: opacity 0.5s ease; /* Only transition opacity */
-    pointer-events: none; /* Non-interactive when hidden */
-    max-width: calc(100% - 30px); /* Fit within potential padding */
+    transform: translate(-50%, -50%); 
+    transition: opacity 0.5s ease; 
+    pointer-events: none; 
+    max-width: calc(100% - 30px); 
     max-height: calc(100% - 30px);
     width: auto;
     height: auto;
 }
 
-/* Show active direct child - DOES NOT take space itself, acts as a layer */
+/* Show active direct child (Single Image or Java Group) - CRITICAL FIX */
 .certificate-viewer > .active {
     opacity: 1;
     pointer-events: auto;
-    position: absolute; /* Keep absolute */
-    /* Size constraints */
-    max-width: 95%; /* Limit width within the viewer */
-    max-height: 95%; /* Limit height */
+    /* FIX: Force active element into normal flow so container height is calculated */
+    position: static; 
+    transform: none;
+    top: auto;
+    left: auto;
+
+    max-width: 100%;
+    max-height: 100%;
     width: auto;
     height: auto;
-    /* Reset transform if needed */
-    transform: translate(-50%, -50%); /* Keep centered */
 }
 
-/* Specific size for single active images */
+/* Specific size and centering for single active images */
 .certificate-viewer > img.active {
-    max-height: 450px; /* Max height for single large certs */
+    max-height: 500px; 
+    max-width: 100%;
     object-fit: contain;
     border-radius: 8px;
     box-shadow: 0 8px 25px rgba(0, 0, 0, 0.5);
+    margin: 0 auto;
+    display: block;
 }
 
 /* Java container specific style when active */
 .certificate-viewer #java-cert.active {
-    display: flex; /* Use flex to arrange children */
+    display: flex; 
     justify-content: center;
-    align-items: center;
-    gap: 20px;
+    align-items: center; 
+    gap: 10px;
     flex-wrap: wrap;
-    width: 100%; /* Take full available width */
-    height: 100%; /* Take full available height */
-    /* Ensure opacity/pointer events are set correctly */
-    opacity: 1;
-    pointer-events: auto;
-    position: absolute; /* Keep centered */
-    /* Other styles like max-height handled by .active */
+    width: 100%; 
+    height: auto;
+    padding: 10px 0;
+    max-height: none; 
+    overflow-y: visible;
+    position: static; /* CRITICAL FIX: Ensure container flows correctly */
 }
 
-/* Images inside the ACTIVE Java container */
+/* Images inside the ACTIVE Java container - CRITICAL FIX (ensures visibility and flow) */
 .certificate-viewer #java-cert.active img {
-    max-height: 350px; /* ** Smaller than single certs ** */
-    max-width: 48%; /* Allow side-by-side, adjust % if needed */
-    width: auto; height: auto; /* Maintain aspect ratio */
+    max-height: 250px; 
+    width: 48%; 
+    max-width: 350px; 
+    height: auto;
     object-fit: contain;
     border-radius: 6px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
-    /* Make them behave like inline elements within the flex container */
-    display: inline-block;
-    vertical-align: middle;
-    /* No absolute positioning needed here */
-    position: static;
-    /* Ensure visible */
-    opacity: 1;
+    
+    display: block;
+    opacity: 1; 
     pointer-events: auto;
-    transform: none;
+    position: static; /* FIX: Ensure they flow correctly */
+    transform: none; 
+    margin: 5px; 
+    flex: 0 0 auto;
 }
 
 /* --- Projects Section --- */
@@ -225,7 +231,7 @@ h2 { margin-bottom: 35px; text-align: center; font-size: 2.2rem; font-weight: 60
 .contact-form textarea { min-height: 120px; resize: vertical; padding-top: 13px; }
 .contact-form input:focus + label, .contact-form input:not(:placeholder-shown) + label, .contact-form textarea:focus + label, .contact-form textarea:not(:placeholder-shown) + label { top: -9px; left: 10px; font-size: 0.75rem; color: var(--cyan-accent); background: var(--bg-medium); padding: 1px 5px; border-radius: 4px; }
 .contact-form button { width: 100%; padding: 13px; font-size: 1rem; background: var(--cyan-accent); border: none; border-radius: 8px; font-weight: 600; cursor: pointer; transition: transform var(--transition-speed), box-shadow var(--transition-speed), background-color var(--transition-speed); color: var(--bg-dark); margin-top: 10px; box-shadow: 0 4px 15px rgba(0, 184, 212, 0.3); }
-.contact-form button:hover { transform: translateY(-3px); box-shadow: 0 7px 20px rgba(0, 229, 255, 0.5); background-color: var(--cyan-glow); }
+.contact-form button:hover { transform: translateY(-3px) scale(1.03); background: var(--cyan-glow); box-shadow: 0 7px 20px rgba(0, 229, 255, 0.5); }
 .social-links { margin-top: 30px; display: flex; justify-content: center; gap: 25px; }
 .social-btn { width: 50px; height: 50px; background: rgba(255, 255, 255, 0.05); border: 1px solid var(--charcoal); box-shadow: 0 3px 10px rgba(0, 0, 0, 0.4); border-radius: 50%; display: flex; justify-content: center; align-items: center; transition: transform var(--transition-speed), box-shadow var(--transition-speed), border-color var(--transition-speed), background-color var(--transition-speed); overflow: hidden; }
 .social-btn img { width: 100%; height: 100%; object-fit: cover; display: block; transition: transform 0.3s ease; }
@@ -273,7 +279,7 @@ footer { background: #08080b; padding: 20px; text-align: center; margin-top: 50p
     .skill { padding: 9px 16px; font-size: 0.85rem;}
 
     .certificate-viewer > img.active { max-height: 400px; }
-    .certificate-viewer #java-cert.active img { max-height: 350px; max-width: 47%; }
+    .certificate-viewer #java-cert.active img { max-height: 250px; width: 48%; }
 
     .resume-options { flex-direction: column; gap: 15px; }
     .resume-btn { padding: 11px 24px; font-size: 0.9rem; }
