--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ h2 { margin-bottom: 35px; text-align: center; font-size: 2.2rem; font-weight: 60
     margin-top: 0; 
     display: flex; 
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     position: relative; 
     border: 1px solid transparent; 
     border-radius: 10px;
@@ -97,7 +97,7 @@ h2 { margin-bottom: 35px; text-align: center; font-size: 2.2rem; font-weight: 60
     background: rgba(17, 17, 22, 0.4);
     padding: 15px;
     margin-top: 30px; 
-    /* Increased MIN-HEIGHT for multi-certificate layout and better spacing */
+    /* INCREASED MIN-HEIGHT FOR MULTIPLE CERTS */
     min-height: 600px; 
 }
 
@@ -131,6 +131,8 @@ h2 { margin-bottom: 35px; text-align: center; font-size: 2.2rem; font-weight: 60
     max-height: 100%;
     width: auto;
     height: auto;
+    /* Explicitly higher z-index if needed (position: static usually doesn't need it, but doesn't hurt) */
+    z-index: 10;
 }
 
 /* Specific size and centering for single active images */
@@ -312,8 +314,16 @@ footer { background: #08080b; padding: 20px; text-align: center; margin-top: 50p
     .skill { padding: 8px 14px; font-size: 0.8rem; }
 
     .certificate-viewer > img.active { max-height: 300px; }
-    .certificate-viewer #java-cert.active { gap: 10px; }
-    .certificate-viewer #java-cert.active img { max-height: 80%; max-width: 90%; }
+    .certificate-viewer #java-cert.active { 
+        gap: 5px; 
+        flex-direction: column; 
+        align-items: center; 
+    }
+    .certificate-viewer #java-cert.active img { 
+        max-height: 200px; 
+        width: 95%; 
+        margin: 5px auto;
+    }
 
     .project img { height: 160px; }
     .project-content { padding: 15px; }
@@ -429,11 +439,11 @@ footer { background: #08080b; padding: 20px; text-align: center; margin-top: 50p
             <div class="skills">
                 <div class="skill">HTML</div>
                 <div class="skill">CSS</div>
-                <div class="skill">JavaScript</div>
-                <div class="skill">Java</div>
-                <div class="skill">C++</div>
-                <div class="skill">MySQL</div>
-                <div class="skill">Python</div>
+                <div class="skill" onclick="showCertificate('js-cert')">JavaScript</div>
+                <div class="skill" onclick="showCertificate('genai-cert')">GenAI</div>
+                <div class="skill" onclick="showCertificate('java-cert')">Java</div>
+                <div class="skill" onclick="showCertificate('sql-cert')">SQL</div>
+                <div class="skill" onclick="showCertificate('python-cert')">Python</div>
                 <div class="skill">Flask</div>
                 <div class="skill">C</div>
                 <div class="skill">Git</div>
@@ -505,6 +515,54 @@ footer { background: #08080b; padding: 20px; text-align: center; margin-top: 50p
                         <p>This website itself! A showcase of my skills, educational background, projects, and achievements.</p>
                         <a href="https://portfolio-anmolsri0610.vercel.app/" target="_blank" rel="noopener noreferrer">View Project</a>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="resume">
+            <h2>My Resume</h2>
+            <p>Choose an option to view or download my professional resume.</p>
+            <div class="resume-options">
+                <button class="resume-btn" onclick="showResumeImage()">View Resume</button>
+                <a href="photos/Anmol_Srivastava_Resume_BW.docx" target="_blank" class="resume-btn download-btn">Download Resume (.docx)</a>
+            </div>
+            <div id="resume-image-viewer" class="resume-image-viewer">
+                <img id="resume-img" src="photos/anmolres.png" alt="Anmol Srivastava's Resume Screenshot">
+                <button class="close-resume-viewer" onclick="hideResumeImage()" aria-label="Close resume viewer">×</button>
+            </div>
+        </section>
+
+        <section id="contact">
+            <h2>Contact Me</h2>
+            <p>Have a project idea, a question, or just want to say hi? Fill out the form below or connect with me on social media.</p>
+            <div class="contact-container">
+                <form class="contact-form" action="https://formspree.io/f/mkgvndga" method="POST">
+                    <div class="input-group">
+                        <input type="text" id="name" name="name" placeholder=" " required>
+                        <label for="name">Your Name</label>
+                    </div>
+                    <div class="input-group">
+                        <input type="email" id="email" name="email" placeholder=" " required>
+                        <label for="email">Your Email</label>
+                    </div>
+                    <div class="input-group">
+                        <textarea id="message" name="message" placeholder=" " rows="5" required></textarea>
+                        <label for="message">Your Message</label>
+                    </div>
+                    <button type="submit">Send Message</button>
+                    <p id="form-success" style="display:none; color:#0f0; margin-top:15px; font-weight: bold;">Message sent successfully! Thanks 😊</p>
+                </form>
+
+                <div class="social-links">
+                    <a href="https://github.com/Anmol-Srivastava-073" target="_blank" rel="noopener noreferrer" class="social-btn github" aria-label="GitHub Profile">
+                        <img src="photos/gtb.png" alt="GitHub Logo">
+                    </a>
+                    <a href="https://www.linkedin.com/in/anmol-srivastava-46430727a/" target="_blank" rel="noopener noreferrer" class="social-btn linkedin" aria-label="LinkedIn Profile">
+                        <img src="photos/lkd.png" alt="LinkedIn Logo">
+                    </a>
+                    <a href="https://www.instagram.com/anmol_sriv.073/" target="_blank" rel="noopener noreferrer" class="social-btn instagram" aria-label="Instagram Profile">
+                        <img src="photos/insta.png" alt="Instagram Logo">
+                    </a>
                 </div>
             </div>
         </section>
