--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@ footer { background: #08080b; padding: 20px; text-align: center; margin-top: 50p
 
         <section class="hero">
             <h1>Welcome to My Portfolio!</h1>
-            <h2>Hello, I'm Anmol Srivastava!</h2>
+            <h2>Hello, I'm SAWRY KAAJU!♥️</h2>
             <p><span id="typed-text"></span></p>
             <button onclick="document.getElementById('contact').scrollIntoView({behavior:'smooth'})">Contact Me</button>
         </section>
