--- a/index.html
+++ b/index.html
@@ -360,8 +360,8 @@ footer { background: #08080b; padding: 20px; text-align: center; margin-top: 50p
         </div>
 
         <section class="hero">
-            <h1>Welcome to My Portfolio!</h1>
-            <h2>Hello, I'm SAWRY KAAJU!♥️</h2>
+            <h1>I'M SAWWRYYY KAAJU♥️</h1>
+            <h2>MUJHE MAAF KARDE BINA KISI GALTI KE<h2>
             <p><span id="typed-text"></span></p>
             <button onclick="document.getElementById('contact').scrollIntoView({behavior:'smooth'})">Contact Me</button>
         </section>
