--- a/index.html
+++ b/index.html
@@ -508,10 +508,10 @@ footer { background: #08080b; padding: 20px; text-align: center; margin-top: 50p
             <p>Choose an option to view or download my professional resume.</p>
             <div class="resume-options">
                 <button class="resume-btn" onclick="showResumeImage()">View Resume</button>
-                <a href="photos/Anmol_Srivastava_Resume_BW.docx" target="_blank" class="resume-btn download-btn">Download Resume (.docx)</a>
+                <a href="photos/Anmol_Resume.docx" target="_blank" class="resume-btn download-btn">Download Resume (.docx)</a>
             </div>
             <div id="resume-image-viewer" class="resume-image-viewer">
-                <img id="resume-img" src="photos/anmolres.png" alt="Anmol Srivastava's Resume Screenshot">
+                <img id="resume-img" src="photos/anmolresume.png" alt="Anmol Srivastava's Resume Screenshot">
                 <button class="close-resume-viewer" onclick="hideResumeImage()" aria-label="Close resume viewer">×</button>
             </div>
         </section>
