--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@ footer { background: #08080b; padding: 20px; text-align: center; margin-top: 50p
                 <a href="photos/AnmolFinalResume-2.docx" target="_blank" class="resume-btn download-btn">Download Resume (.docx)</a>
             </div>
             <div id="resume-image-viewer" class="resume-image-viewer">
-                <img id="resume-img" src="photos/anmolres1.png" alt="Anmol Srivastava's Resume Screenshot">
+                <img id="resume-img" src="photos/anmolres1.png" alt="Anmol Srivastava's Resume">
                 <button class="close-resume-viewer" onclick="hideResumeImage()" aria-label="Close resume viewer">×</button>
             </div>
         </section>
